syntax = "proto3";

package order;

option go_package = "/proto";

service Order {
    rpc CreateOrderByCart(CreateOrderByCartRequest) returns (CreateOrderByCartResponse);
}

message CreateOrderByCartRequest {
    uint64 cart_id = 1;
}

message CreateOrderByCartResponse {

}